# ripplepy

./: .gitignore  1  CMakeLists.txt  README.md  environment.yml  pyproject.toml  setup.py
fortran/: CMakeLists.txt  DLSODE.f  ripple.f90
python/: CMakeLists.txt
python/ripplepy/: __init__.py  mgrid.py  ripple.py
tests/: ripple_test.ipynb  ripplepy.ipynb  test.py
tests/test_file/: input.ncsx_c09r00_free  mercier.ncsx_c09r00_free  parvmecinfo.txt  threed1.ncsx_c09r00_free  wout_ncsx_c09r00_free.nc
