[build-system]
requires = [
    "scikit-build-core>=0.10",
    "cmake>=3.18",
    "ninja>=1.10",
    "numpy>=1.19",
    "f90wrap>=0.2",
]
build-backend = "scikit_build_core.build"

[project]
name = "ripplepy"
version = "0.1.0"
description = "Python package for effective ripple calculation with Fortran backend"
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
license = {text = "MIT"}
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Fortran",
    "Intended Audience :: Science/Research",
]
dependencies = [
    "numpy>=1.19",
    "scipy>=1.5",
    "f90wrap>=0.2",
]

[project.optional-dependencies]
plot = [
    "matplotlib>=3.7",
]

[project.urls]
Homepage = "https://github.com/username/ripplepy"
Repository = "https://github.com/username/ripplepy.git"

[tool.scikit-build]
cmake.version = ">=3.18"
build-dir = "build/{wheel_tag}"
wheel.packages = ["python/ripplepy"]

[tool.scikit-build.cmake.define]
CMAKE_BUILD_TYPE = "Release"